# rust-weechat

./: Cargo.toml
src/: errors.rs  lib.rs
src/ffi/: consts.rs  mod.rs  structs.rs
weechat-rs/src/buffer/: hotlist.rs  mod.rs
weechat-rs/src/hooks/: timer.rs
weechat-sys/: Cargo.toml
weechat/src/buffer/: mod.rs
