[package]
name = "weechat-sys"
version = "0.2.0"
authors = ["Damir Jelić <poljar@termina.org.uk>"]
description = "Rust low level API bindings for Weechat"
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/poljar/rust-weechat"

[build-dependencies.bindgen]
version = "0.55.1"
default-features = false
features = ["runtime", "which-rustfmt"]

[dependencies]
libc = "0.2.72"
